<resources>
    <string name="app_name">instagram</string>
    <string name="from">from</string>
    <string name="facebook">FACEBOOK</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="info">By signing up, you agree to our Terms, Data Policy and Cookies Policy</string>
    <string name="have_an_account">Have an account.?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="_50">50</string>
    <string name="post">POST</string>
    <string name="_500">500</string>
    <string name="followers">FOLLOWERS</string>
    <string name="akanksha_sharma">Akanksha Sharma</string>
    <string name="bio">Dream big, work hard, stay focused, and live a life no one can even think of.If You Are Working On Something That You Really Care About, You Don’t Have To Be Pushed. The Vision Pulls You.</string>
    <string name="_350">350</string>
    <string name="edit_profile">Edit profile</string>
    <string name="following">FOLLOWING</string>
    <string name="info1">Sign Up to see photos and videos from your friends</string>
    <string name="phone_number_username_or_email">Phone number, username or email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">--------------------OR--------------------</string>
    <string name="instagram_from_facebook">From Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_botton_nav">MainActivity</string>
    <string name="title_activity_demo">demo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reset_password">Reset Password</string>

</resources>